[gd_scene load_steps=45 format=3 uid="uid://cd15aad1bpd8w"]

[ext_resource type="Script" path="res://scripts/UI/skill_tree.gd" id="1_16axu"]
[ext_resource type="PackedScene" uid="uid://r3ca0h4n62js" path="res://scenes/UI/skill_upgrade.tscn" id="1_i82p2"]
[ext_resource type="Script" path="res://scripts/UI/main_menu.gd" id="1_uremf"]
[ext_resource type="StyleBox" uid="uid://2jkrr2y0o4s0" path="res://theme/second_panel.tres" id="2_54idq"]
[ext_resource type="Texture2D" uid="uid://c1l210ghih2f8" path="res://assets/passive_items/Sprite-Spinach.png" id="2_lmrfa"]
[ext_resource type="Script" path="res://scripts/player/skill.gd" id="3_olqca"]
[ext_resource type="Script" path="res://scripts/player/stats.gd" id="4_gcm7t"]
[ext_resource type="Script" path="res://scripts/UI/gold_ui.gd" id="5_dg67p"]
[ext_resource type="Texture2D" uid="uid://2r0dg3rt6sek" path="res://assets/passive_items/Sprite-Armor.png" id="6_i7ivb"]
[ext_resource type="Texture2D" uid="uid://d4m4mohxu1lck" path="res://assets/passive_items/Sprite-Pummarola.png" id="7_hu2kv"]
[ext_resource type="Script" path="res://scripts/UI/start_button.gd" id="9_rt6uy"]
[ext_resource type="StyleBox" uid="uid://bmklb4epx4sev" path="res://theme/main_panel.tres" id="11_l6ors"]
[ext_resource type="Theme" uid="uid://c0tvn6xd2yv62" path="res://theme/button.tres" id="12_61xx3"]
[ext_resource type="Texture2D" uid="uid://bxv67bcysylp7" path="res://assets/GUI/third_panel.png" id="14_07lec"]
[ext_resource type="StyleBox" uid="uid://bhkvhmpsp5gtj" path="res://theme/third_panel.tres" id="14_eg4re"]
[ext_resource type="Script" path="res://scripts/UI/enemy_list.gd" id="15_1tydw"]
[ext_resource type="FontFile" uid="uid://b8688mslo22wu" path="res://assets/font/Minecraftia-Regular.ttf" id="15_x6iut"]
[ext_resource type="Texture2D" uid="uid://cyxqunxkcnktg" path="res://assets/GUI/second_panel.png" id="16_0lyg7"]
[ext_resource type="StyleBox" uid="uid://doqock7erce6k" path="res://theme/hover_button.tres" id="16_2vuli"]
[ext_resource type="StyleBox" uid="uid://f87plyuqdqh4" path="res://theme/normal_button.tres" id="17_bpngx"]

[sub_resource type="Resource" id="Resource_lgh8b"]
script = ExtResource("4_gcm7t")
description = "+10% Damage Boost"
max_health = 0.0
recovery = 0.0
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.1

[sub_resource type="Resource" id="Resource_edt7n"]
script = ExtResource("3_olqca")
name = "Damage Boost I"
icon = ExtResource("2_lmrfa")
cost = 10
tier = 1
stats = SubResource("Resource_lgh8b")

[sub_resource type="Resource" id="Resource_12pbf"]
script = ExtResource("4_gcm7t")
description = "+10% Damage Boost"
max_health = 0.0
recovery = 0.0
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.1

[sub_resource type="Resource" id="Resource_ndunu"]
script = ExtResource("3_olqca")
name = "Damage Boost II"
icon = ExtResource("2_lmrfa")
cost = 30
tier = 2
stats = SubResource("Resource_12pbf")

[sub_resource type="Resource" id="Resource_vj4p4"]
script = ExtResource("4_gcm7t")
description = "+20% Damage Boost"
max_health = 0.0
recovery = 0.0
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.2

[sub_resource type="Resource" id="Resource_aume2"]
script = ExtResource("3_olqca")
name = "Damage Boost III"
icon = ExtResource("2_lmrfa")
cost = 50
tier = 3
stats = SubResource("Resource_vj4p4")

[sub_resource type="Resource" id="Resource_3rhks"]
script = ExtResource("4_gcm7t")
description = "+2 Armor"
max_health = 0.0
recovery = 0.0
armor = 2.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_gw73w"]
script = ExtResource("3_olqca")
name = "Armor I"
icon = ExtResource("6_i7ivb")
cost = 10
tier = 1
stats = SubResource("Resource_3rhks")

[sub_resource type="Resource" id="Resource_7ce3g"]
script = ExtResource("4_gcm7t")
description = "+2 Armor"
max_health = 0.0
recovery = 0.0
armor = 2.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_lrs8i"]
script = ExtResource("3_olqca")
name = "Armor II"
icon = ExtResource("6_i7ivb")
cost = 30
tier = 2
stats = SubResource("Resource_7ce3g")

[sub_resource type="Resource" id="Resource_qilkh"]
script = ExtResource("4_gcm7t")
description = "+3 Armor"
max_health = 0.0
recovery = 0.02
armor = 3.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_pfjlr"]
script = ExtResource("3_olqca")
name = "Armor III"
icon = ExtResource("6_i7ivb")
cost = 50
tier = 3
stats = SubResource("Resource_qilkh")

[sub_resource type="Resource" id="Resource_0ypu6"]
script = ExtResource("4_gcm7t")
description = "+0.2 Health/sec"
max_health = 0.0
recovery = 0.2
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_00jfs"]
script = ExtResource("3_olqca")
name = "Recovery I"
icon = ExtResource("7_hu2kv")
cost = 10
tier = 1
stats = SubResource("Resource_0ypu6")

[sub_resource type="Resource" id="Resource_xhq7e"]
script = ExtResource("4_gcm7t")
description = "+0.4 Health/sec"
max_health = 0.0
recovery = 0.4
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_1dwro"]
script = ExtResource("3_olqca")
name = "Recovery II"
icon = ExtResource("7_hu2kv")
cost = 30
tier = 2
stats = SubResource("Resource_xhq7e")

[sub_resource type="Resource" id="Resource_ooh1e"]
script = ExtResource("4_gcm7t")
description = "+0.6 Health/sec"
max_health = 0.0
recovery = 0.6
armor = 0.0
shield = 0.0
movement_speed = 0.0
attack_range = 0.0
magnet = 0.0
revival = 0
growth = 0.0
dmg_multiplier = 0.0

[sub_resource type="Resource" id="Resource_g4mex"]
script = ExtResource("3_olqca")
name = "Recovery III"
icon = ExtResource("7_hu2kv")
cost = 50
tier = 3
stats = SubResource("Resource_ooh1e")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_58yrj"]
texture = ExtResource("14_07lec")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4au8c"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqsvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syvsf"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_mdp16"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 4
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("15_x6iut")
Button/styles/disabled = SubResource("StyleBoxFlat_4au8c")
Button/styles/focus = SubResource("StyleBoxEmpty_yqsvm")
Button/styles/hover = ExtResource("16_2vuli")
Button/styles/normal = ExtResource("17_bpngx")
Button/styles/pressed = SubResource("StyleBoxFlat_syvsf")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4timu"]
texture = ExtResource("16_0lyg7")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 5.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uremf")

[node name="skill_tree" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
theme_override_styles/panel = ExtResource("2_54idq")
script = ExtResource("1_16axu")

[node name="dmg_boost" type="Control" parent="skill_tree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="skill_upgrade" parent="skill_tree/dmg_boost" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = -148.0
offset_top = -8.0
offset_right = -108.0
offset_bottom = 32.0
skill = SubResource("Resource_edt7n")

[node name="skill_upgrade2" parent="skill_tree/dmg_boost" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = -212.0
offset_top = -8.0
offset_right = -172.0
offset_bottom = 32.0
skill = SubResource("Resource_ndunu")

[node name="skill_upgrade3" parent="skill_tree/dmg_boost" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = -276.0
offset_top = -8.0
offset_right = -236.0
offset_bottom = 32.0
skill = SubResource("Resource_aume2")

[node name="armor" type="Control" parent="skill_tree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="skill_upgrade" parent="skill_tree/armor" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = 148.0
offset_top = -8.0
offset_right = 188.0
offset_bottom = 32.0
skill = SubResource("Resource_gw73w")

[node name="skill_upgrade2" parent="skill_tree/armor" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = 212.0
offset_top = -8.0
offset_right = 252.0
offset_bottom = 32.0
skill = SubResource("Resource_lrs8i")

[node name="skill_upgrade3" parent="skill_tree/armor" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_left = 276.0
offset_top = -8.0
offset_right = 316.0
offset_bottom = 32.0
skill = SubResource("Resource_pfjlr")

[node name="recovery" type="Control" parent="skill_tree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="skill_upgrade" parent="skill_tree/recovery" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_top = -32.0
offset_bottom = 8.0
skill = SubResource("Resource_00jfs")

[node name="skill_upgrade2" parent="skill_tree/recovery" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_top = -88.0
offset_bottom = -48.0
skill = SubResource("Resource_1dwro")

[node name="skill_upgrade3" parent="skill_tree/recovery" instance=ExtResource("1_i82p2")]
layout_mode = 0
offset_top = -144.0
offset_bottom = -104.0
skill = SubResource("Resource_g4mex")

[node name="gold" type="Label" parent="skill_tree"]
layout_mode = 0
offset_left = 448.0
offset_top = 8.0
offset_right = 616.0
offset_bottom = 31.0
horizontal_alignment = 2
script = ExtResource("5_dg67p")

[node name="menu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
theme_override_styles/panel = ExtResource("11_l6ors")

[node name="start" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -104.0
offset_right = 56.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("12_61xx3")
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("9_rt6uy")

[node name="upgrades" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -218.0
offset_top = 8.0
offset_right = -66.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("12_61xx3")
theme_override_font_sizes/font_size = 24
text = "Upgrades"

[node name="beastiary" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 53.0
grow_vertical = 2
theme = ExtResource("12_61xx3")
theme_override_font_sizes/font_size = 24
text = "Beastiary"

[node name="quit" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 560.0
offset_top = 124.0
offset_right = 612.0
offset_bottom = 155.0
grow_vertical = 2
theme = ExtResource("12_61xx3")
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="beastiary" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 180)
theme_override_styles/panel = ExtResource("2_54idq")

[node name="ScrollContainer" type="ScrollContainer" parent="beastiary"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 48.0
offset_top = -148.0
offset_right = 298.0
offset_bottom = 102.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_58yrj")

[node name="enemy_list" type="VBoxContainer" parent="beastiary/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_mdp16")
theme_override_constants/separation = 10
script = ExtResource("15_1tydw")

[node name="info" type="Panel" parent="beastiary"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -148.0
offset_right = -46.0
offset_bottom = 102.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = ExtResource("14_eg4re")

[node name="Texture" type="TextureRect" parent="beastiary/info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 16.0
offset_right = 43.0
offset_bottom = 96.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="beastiary/info/Texture"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4timu")

[node name="VBoxContainer" type="VBoxContainer" parent="beastiary/info"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 11.0
offset_right = 85.0
offset_bottom = 88.0
grow_vertical = 2

[node name="name" type="Label" parent="beastiary/info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Name:"

[node name="damage" type="Label" parent="beastiary/info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Damage:"

[node name="health" type="Label" parent="beastiary/info/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Health:"

[node name="back" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -58.0
offset_right = -14.0
offset_bottom = -13.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_61xx3")
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="pressed" from="menu/start" to="menu/start" method="_on_pressed"]
[connection signal="pressed" from="menu/upgrades" to="." method="_on_upgrades_pressed"]
[connection signal="pressed" from="menu/beastiary" to="." method="_on_beastiary_pressed"]
[connection signal="pressed" from="menu/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
